# face-recognize-api

./: Dockerfile  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml
data/: embeddings.csv  images.csv  users.csv
src/face_recoginze_api/: app.py  dependencies.py
src/face_recoginze_api/DTOs/: dtos.py
src/face_recoginze_api/database/: database.py  tables.py
src/face_recoginze_api/enums/: enums.py
src/face_recoginze_api/example/: example.py
src/face_recoginze_api/models/: face_model.py  models.py  response_message.py
src/face_recoginze_api/repositories/: repositories.py
src/face_recoginze_api/routers/: faces.py  images.py  users.py
src/face_recoginze_api/services/: face_recognize_service.py  image_service.py  user_services.py
src/face_recoginze_api/settings/: database.py
src/face_recognize_api/: FaceRecognizeService.py  __init__.py  face_recognize.py  face_searching.py  pre_processing.py
test/: test.py
